examples/test/testpolicy1515.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1515
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key4: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value23
          key22: value48
          key8: value3
      podSelector:
        matchLabels:
          key2: value13
          key23: value18
